# vplic

./: .gitignore  Cargo.toml
src/: consts.rs  devops_impl.rs  lib.rs  vplic.rs
