[package]
name = "riscv_vplic"
edition = "2024"

[dependencies]
axdevice_base = { git = "https://github.com/arceos-hypervisor/axdevice_crates.git",branch = "inject_interrupt"}
axaddrspace = { git = "https://github.com/arceos-hypervisor/axaddrspace.git" }
memory_addr = "0.3"
axerrno = "0.1.0"
#riscv_plic={git = "https://github.com/arceos-org/riscv_plic.git"}
log = "0.4.21"
# vcpu_if = { path = "../vcpu_if" }
# crate_interface = "0.1.3"
spin = "0.9"